Fix month connector overflow bug
Fixes overflow caused by timeline day block with no
time marker misaligning with events above and below.
Month connector now takes % for min-width value, adjusted
accordingly when deploying sidebar.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2547,7 +2547,9 @@ h5 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex: 2 0 0;
+  /* flex: 2 0 0; */
+  min-width: 30%;
+  transition: 0.5s;
 }
 
 .date-label-area {
@@ -2646,6 +2648,7 @@ h5 {
   display: flex;
   flex-direction: row;
   margin-bottom: 25px;
+  flex: 1 0 0;
 }
 
  .event-line {
@@ -2754,11 +2757,6 @@ h5 {
   min-height: 0;
   height: 0;
   transition: 0.3s ease;
-  /* min-height: 250px; */
-  overflow-y: hidden;
-  /* To animate */
-
-  word-break: break-all;
 }
 
 .event-type {
@@ -2771,8 +2769,22 @@ h5 {
 .event-button-area {
   display: flex;
   justify-content: center;
+  flex: 1 1 0;
   padding: 16px;
 }
+
+.timeline-view-button {
+  width: 80px;
+}
+
+@media screen and (min-width: 1200px) {
+  
+  .month-connector {
+    flex: 2 1 0;
+  }
+
+}
+
 
 @media screen and (max-width: 650px) { 
 
